# Aletheia2

./: BETA_STATUS.md  COMPLETE_SYSTEM_GUIDE.md  COMPREHENSIVE_REVIEW.md  DEPLOYMENT.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_TEST_REPORT.md  HANDOFF_NEXT_SESSION.md  MANIFEST.md  OPERATION_MANUAL.md  ORCHESTRATOR_OPERATIONAL_MANUAL.md  PORTING_CATALOG.md  QUICKSTART.md  README.md  README_AI_PLATFORM.md  RELEASE_NOTES_BETA.md  RELEASE_NOTES_RC.md  RELEASE_NOTES_V1.0.md  RELEASE_NOTES_V1.1.md  RELEASE_NOTES_V2.0.md  RELEASE_NOTES_V2.1.md  RELEASE_NOTES_V2.5.md  RELEASE_NOTES_V4.0_FINAL.md  RELEASE_NOTES_V5.0_FINAL.md  RELEASE_NOTES_V5.5_CURATED.md  RELEASE_NOTES_V6.0_PRODUCTION.md  RELEASE_NOTES_V7.0_COMPLETE.md  RELEASE_NOTES_V7.1.md  RELEASE_NOTES_V8.0.md  RELEASE_NOTES_V9.0.md  SPINE_ARCHITECTURE.md  TEST_ANALYSIS.md  TEST_DOCUMENTATION.md  TEST_REPORT.json  USER_GUIDE.md  comprehensive_test_harness.py  cqe_server.py  cqe_worker.py  docker-compose.yml  (+15 more)
aletheia2/: __init__.py
aletheia_system/: README.md  SHIPMENT_MANIFEST.md  aletheia.py  setup.py
commons_ledger/: README.md
core/: __init__.py  geo_pipeline.py  lattice_engine.py  morphonic_runtime.py  speedlight_wrapper.py
cqe_runtime/: __init__.py  cli.py  explorer.py
data/: test_moonshine.db
layer1_morphonic/: __init__.py  acceptance_rules.py  alena_operators.py  cqe_atom.py  epsilon_canonicalizer.py  integration_test.py  lambda_e8_calculus.py  master_message.py  mglc.py  morphon.py  morphon_seed.py  morphonic_emergence_demo.py  overlay_system.py  provenance.py  quadratic_law_harness.py  seed_generator.py  shell_protocol.py  validate_proto_language.py
layer2_geometric/: DimensionalEnforcementEngine.py  E8Explorer.py  E8Face.py  E8Lattice.py  E8NavierStokesValidator.py  E8Position.py  E8SpecializedTester.py  E8WeylChamberGraph.py  E8YangMillsValidator.py  LatticeBuilderV1.py  TestE8Embedding.py  alena_ops.py  core_CQEEnhancedHarness.py  core_CQEKernal.py  core_CQEMasterBootstrap.py  core_CQEMemoryManager.py  core_CQEOperatingSystem.py  core_CQEOverlayRepository.py  core_CQEProcessor.py  core_CQEScalabilityBenchmarks.py  core_CQETestHarnessDemonstration.py  core_CQEValidationFramework.py  core_E8LatticeProcessor.py  core_SacredGeometryEnhancedCQE.py  core_SacredGeometryGovernance.py  core_ToroidalSacredGeometry.py  core_demonstrate_mandelbrot_sacred_geometry.py  create_e8_projection_figure.py  create_e8_roots_visualization.py  curvature_field.py  dihedral_ca.py  e8_explorer.py  e8_fourier_coefficient.py  generate_e8_pathway.py  geometric_toolkit.py  gvs_GeometricRenderer.py  lambda_system.py  niemeier_specs_1.py  physics.py  quaternion.py  (+4 more)
layer2_util/: E8Explorer.py  E8Face.py  E8LatticeAnalyzer.py  E8LatticeComputer.py  E8SpecializedTester.py  E8WeylChamberGraph.py  E8YangMillsValidator.py  GeometryTransformerStandaloneV2.py  LatticeBuilderV1.py  TestE8LatticeFoundations.py  __init__.py  babai_embedder.py  carlson_proof.py  core_CQEAnalyzer.py  core_CQEController.py  core_CQEIOManager.py  core_E8GeometryValidator.py  core_SacredGeometryCQEAtom.py  core_TestE8Lattice.py  core_demonstrate_mandelbrot_sacred_geometry.py  create_e8_projection_figure.py  create_e8_roots_visualization.py  crt_24ring.py  curvature_field.py  dihedral_ca_1.py  dimension.py  e8_explorer.py  e8_fourier_coefficient.py  e8x3_projection.py  generate_e8_pathway.py  generate_e8_roots.py  geometric_toolkit (4).py  geometry (1).py  geometry.py  golay_code.py  gvs_E8Lattice.py  lambda_system.py  lattice (1).py  lattice.py  (+3 more)
(+658 files in other folders)
